--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,29 +1,172 @@
 {
+  "common": {
+    "delete": "حذف"
+  },
   "nav": {
     "home": "الرئيسية",
     "favorites": "المفضلة",
-    "profile": "الملف الشخصي"
+    "profile": "الملف الشخصي",
+    "about": "عنا",
+    "signIn": "تسجيل الدخول",
+    "langSwitch": "ع",
+    "logoText": "عقارات",
+    "search": "بحث..."
+  },
+  "createListing": {
+    "title": "إنشاء إعلان",
+    "purpose": {
+      "rent": "إيجار",
+      "sale": "بيع"
+    },
+    "form": {
+      "purposeLabel": "الغاية",
+      "categoryLabel": "نوع العقار",
+      "governorateLabel": "المحافظة",
+      "cityLabel": "المدينة / المنطقة",
+      "selectGovernorate": "اختر المحافظة",
+      "selectGovernorateFirst": "اختر المحافظة أولاً",
+      "selectCity": "اختر المدينة",
+      "otherAreaLabel": "حدد المنطقة (اختياري)",
+      "otherAreaPlaceholder": "مثال: بالقرب من الطريق الدائري، أبو رواش",
+      "selectOption": "اختر {{field}}",
+      "phoneLabel": "رقم الهاتف",
+      "allowWhatsapp": "تفعيل واتساب"
+    },
+    "fields": {
+      "title": "العنوان",
+      "address": "العنوان",
+      "description": "الوصف",
+      "descriptionPlaceholder": "صف العقار، المعالم القريبة، الشروط، وغيرها.",
+      "price": "السعر",
+      "size": "المساحة (م²)",
+      "negotiable": "قابل للتفاوض",
+      "bedrooms": "عدد غرف النوم",
+      "bathrooms": "عدد الحمامات",
+      "floor": "الطابق",
+      "furnished": "مفروش",
+      "parking": "موقف سيارات",
+      "plotArea": "مساحة الأرض (م²)",
+      "frontage": "عرض الواجهة (م)",
+      "zoning": "التصنيف",
+      "cornerLot": "زاوية",
+      "floorArea": "المساحة الداخلية (م²)",
+      "licenseType": "نوع الترخيص",
+      "hasMezz": "ميزانين",
+      "parkingSpots": "عدد أماكن الركن",
+      "totalFloors": "إجمالي الطوابق",
+      "totalUnits": "إجمالي الوحدات",
+      "elevator": "مصعد",
+      "landArea": "مساحة الأرض (م²)",
+      "buildYear": "سنة البناء"
+    },
+    "options": {
+      "zoning": {
+        "residential": "سكني",
+        "commercial": "تجاري",
+        "agricultural": "زراعي",
+        "industrial": "صناعي"
+      },
+      "licenseType": {
+        "retail": "تجزئة",
+        "office": "مكتب",
+        "restaurant": "مطعم",
+        "warehouse": "مخزن",
+        "clinic": "عيادة",
+        "other": "أخرى"
+      }
+    },
+    "messages": {
+      "fieldRequired": "{{field}} مطلوب",
+      "govRequired": "يجب اختيار المحافظة",
+      "cityRequired": "يجب اختيار المدينة / المنطقة",
+      "success": "تم إنشاء الإعلان بنجاح",
+      "errorGeneric": "حدث خطأ ما",
+      "uploadSelectOne": "يرجى اختيار صورة واحدة على الأقل للتحميل",
+      "uploadMaxPerBatch": "يمكنك اختيار {{max}} صور كحد أقصى في المرة الواحدة",
+      "uploadRemaining": "يمكنك التحميل {{remaining}} صورة إضافية فقط. لديك بالفعل {{current}} صورة",
+      "uploadFailed": "فشل تحميل الصور (الحد الأقصى 2 ميجابايت لكل صورة)",
+      "noImages": "لم يتم اختيار صور — سيتم استخدام صورة افتراضية.",
+      "uploadProgress": "{{progress}}٪ تم تحميلها",
+      "errorCreate": "فشل إنشاء الإعلان"
+    },
+    "actions": {
+      "upload": "التحميل",
+      "uploading": "جاري التحميل...",
+      "creating": "جاري الإنشاء...",
+      "submit": "إنشاء الإعلان"
+    }
   },
   "search": {
     "title": "ابحث عن العقار المثالي",
     "governorate": "المحافظة",
+    "allGov": "جميع المحافظات",
+    "allCities": "جميع المدن",
     "city": "المدينة",
+    "allAreas": "جميع المناطق",
+    "selectCityFirst": "اختر المدينة أولاً",
     "type": "نوع العقار",
     "purpose": "الغرض",
     "all": "الكل",
     "rent": "إيجار",
     "sale": "بيع",
     "search": "بحث",
-    "reset": "إعادة التعيين"
+    "reset": "إعادة التعيين",
+    "loading": "جار التحميل...",
+    "errorLoading": "خطأ في التحميل",
+    "selectGovFirst": "اختر المحافظة أولاً",
+    "recentListing": "الإعلانات الحديثة",
+    "showMoreListings": "عرض المزيد من الإعلانات",
+    "recentApartmentsForRent": "شقق حديثة للإيجار",
+    "showMoreApartmentsForRent": "عرض المزيد من الشقق للإيجار",
+    "recentApartmentsForSale": "شقق حديثة للبيع",
+    "showMoreApartmentsForSale": "عرض المزيد من الشقق للبيع",
+    "recentVillasForRent": "فلل حديثة للإيجار",
+    "showMoreVillasForRent": "عرض المزيد من الفلل للإيجار",
+    "recentVillasForSale": "فلل حديثة للبيع",
+    "showMoreVillasForSale": "عرض المزيد من الفلل للبيع",
+    "back": "<- رجوع",
+    "area": "المنطقة",
+    "subarea": "المنطقة الفرعية",
+    "minPrice": "الحد الأدنى للسعر",
+    "maxPrice": "الحد الأقصى للسعر",
+    "minSize": "الحد الأدنى للمساحة (م²)",
+    "maxSize": "الحد الأقصى للمساحة (م²)",
+    "minBeds": "الحد الأدنى لعدد الغرف",
+    "maxBeds": "الحد الأقصى لعدد الغرف",
+    "minBaths": "الحد الأدنى لعدد الحمامات",
+    "maxBaths": "الحد الأقصى لعدد الحمامات",
+    "sort": "الترتيب",
+    "newest": "الأحدث",
+    "oldest": "الأقدم",
+    "priceLH": "السعر (الأقل إلى الأعلى)",
+    "priceHL": "السعر (الأعلى إلى الأقل)",
+    "searchResults": "نتائج البحث",
+    "noResults": "لا توجد نتائج.",
+    "showing": "عرض",
+    "results": "نتائج",
+    "listing": "إعلان",
+    "listings": "إعلانات"
   },
   "listing": {
+    "description": "الوصف",
     "forRent": "للإيجار",
     "forSale": "للبيع",
     "negotiable": "قابل للتفاوض",
+    "propertyDetails": "تفاصيل العقار",
+    "type": "النوع",
+    "location": "الموقع",
+    "listedOn": "تم النشر في",
+    "bed": "غرفة",
     "beds": "غرف",
+    "bath": "حمام",
     "baths": "حمامات",
     "sizeUnit": "م²",
+    "size": "المساحة",
     "price": "ج.م",
+    "furnished": "مفروش",
+    "parking": "موقف سيارات",
+    "floor": "الدور",
+    "landArea": "مساحة الأرض",
     "listedBy": "مُعلن بواسطة",
     "seeMoreFromSeller": "عرض المزيد من هذا المُعلن",
     "propertyTypes": {
@@ -37,10 +180,87 @@
       "warehouse": "مخزن",
       "building": "مبنى",
       "other": "أخرى"
-    }
+    },
+    "frontage": "واجهة",
+    "zoning": "التصنيف",
+    "zoningTypes": {
+      "agricultural": "زراعي",
+      "residential": "سكني",
+      "commercial": "تجاري",
+      "industrial": "صناعي",
+      "other": "أخرى"
+    },
+    "cornerLot": "قطعة زاوية",
+    "license": "ترخيص",
+    "mezzanine": "ميزانين",
+    "parkingSpots": "أماكن وقوف السيارات",
+    "totalFloors": "إجمالي الأدوار",
+    "totalUnits": "إجمالي الوحدات",
+    "elevator": "مصعد",
+    "buildYear": "سنة البناء",
+    "plotArea": "مساحة القطعة",
+    "floorArea": "مساحة الدور",
+    "buildingYear": "سنة البناء",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا الإعلان؟",
+    "contactSeller": "اتصل بالمُعلن",
+    "similarListings": "إعلانات مشابهة",
+    "noSimilarListings": "لا توجد إعلانات مشابهة.",
+    "seeMoreFromThisSeller": "عرض المزيد من هذا المُعلن",
+    "seller": "المُعلن",
+    "memberSince": "عضو منذ",
+    "member": "عضو",
+    "yes": "نعم",
+    "no": "لا",
+    "meter": "م",
+    "callSeller": "اتصل بالمُعلن",
+    "contactWhatsApp": "واتساب",
+    "hello": "مرحبًا، أنا مهتم بهذا الإعلان"
   },
   "favorites": {
     "title": "إعلاناتك المفضلة",
     "empty": "لا توجد مفضلات بعد."
+  },
+  "profile": {
+    "title": "الملف الشخصي",
+    "updateProfile": "تحديث الملف الشخصي",
+    "username": "اسم المستخدم",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "memberSince": "عضو منذ",
+    "update": "تحديث الملف الشخصي",
+    "updating": "جارٍ التحديث...",
+    "updateSuccess": "تم تحديث الملف الشخصي بنجاح.",
+    "updateError": "خطأ في تحديث الملف الشخصي.",
+    "deleteAccount": "حذف الحساب",
+    "deleteAccountConfirmation": "هل أنت متأكد أنك تريد حذف حسابك؟",
+    "accountDeleted": "تم حذف حسابك.",
+    "deleteError": "خطأ في حذف الحساب.",
+    "signOut": "تسجيل الخروج",
+    "createListing": "إنشاء إعلان",
+    "seeAll": "عرض الكل",
+    "favorites": "المفضلة",
+    "noFavorites": "لا توجد مفضلات بعد.",
+    "yourListings": "إعلاناتك",
+    "noListings": "لم تقم بإنشاء أي إعلانات بعد.",
+    "errorFetchingListings": "خطأ في جلب إعلاناتك.",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "confirmDeleteListing": "هل أنت متأكد أنك تريد حذف هذا الإعلان؟",
+    "listingDeleted": "تم حذف الإعلان بنجاح.",
+    "errorDeletingListing": "خطأ في حذف الإعلان."
+  },
+  "updateListing": {
+    "title": "تعديل الإعلان",
+    "actions": {
+      "submit": "تحديث الإعلان",
+      "updating": "جارٍ التحديث..."
+    },
+    "messages": {
+      "error": "فشل تحديث الإعلان",
+      "errorGeneric": "حدث خطأ ما",
+      "loadError": "فشل تحميل الإعلان"
+    }
   }
 }
