--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,25 +1,172 @@
 {
-  "nav": { "home": "Home", "favorites": "Favorites", "profile": "Profile" },
+  "common": {
+    "delete": "Delete"
+  },
+  "nav": {
+    "home": "Home",
+    "favorites": "Favorites",
+    "profile": "Profile",
+    "about": "About",
+    "signIn": "Sign In",
+    "langSwitch": "EN",
+    "logoText": "Aqarat",
+    "search": "Search..."
+  },
+  "createListing": {
+    "title": "Create Listing",
+    "purpose": {
+      "rent": "Rent",
+      "sale": "Sale"
+    },
+    "form": {
+      "purposeLabel": "Purpose",
+      "categoryLabel": "Property Type",
+      "governorateLabel": "Governorate",
+      "cityLabel": "City / Area",
+      "selectGovernorate": "Select Governorate",
+      "selectGovernorateFirst": "Select governorate first",
+      "selectCity": "Select City",
+      "otherAreaLabel": "Specify Area (optional)",
+      "otherAreaPlaceholder": "e.g., Near Ring Road, Abu Rawash",
+      "selectOption": "Select {{field}}",
+      "phoneLabel": "Phone Number",
+      "allowWhatsapp": "Enable WhatsApp"
+    },
+    "fields": {
+      "title": "Title",
+      "address": "Address",
+      "description": "Description",
+      "descriptionPlaceholder": "Describe the property, nearby landmarks, terms, etc.",
+      "price": "Price",
+      "size": "Size (sqm)",
+      "negotiable": "Negotiable",
+      "bedrooms": "Bedrooms",
+      "bathrooms": "Bathrooms",
+      "floor": "Floor",
+      "furnished": "Furnished",
+      "parking": "Parking",
+      "plotArea": "Plot Area (sqm)",
+      "frontage": "Frontage (m)",
+      "zoning": "Zoning",
+      "cornerLot": "Corner Lot",
+      "floorArea": "Floor Area (sqm)",
+      "licenseType": "License Type",
+      "hasMezz": "Mezzanine",
+      "parkingSpots": "Parking Spots",
+      "totalFloors": "Total Floors",
+      "totalUnits": "Total Units",
+      "elevator": "Elevator",
+      "landArea": "Land Area (sqm)",
+      "buildYear": "Build Year"
+    },
+    "options": {
+      "zoning": {
+        "residential": "Residential",
+        "commercial": "Commercial",
+        "agricultural": "Agricultural",
+        "industrial": "Industrial"
+      },
+      "licenseType": {
+        "retail": "Retail",
+        "office": "Office",
+        "restaurant": "Restaurant",
+        "warehouse": "Warehouse",
+        "clinic": "Clinic",
+        "other": "Other"
+      }
+    },
+    "messages": {
+      "fieldRequired": "{{field}} is required",
+      "govRequired": "Governorate is required",
+      "cityRequired": "City/Area is required",
+      "success": "Listing created successfully",
+      "errorGeneric": "Something went wrong",
+      "uploadSelectOne": "Please select at least one image to upload",
+      "uploadMaxPerBatch": "You can only select up to {{max}} images at once",
+      "uploadRemaining": "You can only upload {{remaining}} more image(s). You already have {{current}} image(s)",
+      "uploadFailed": "Image upload failed (2 MB max per image)",
+      "noImages": "No images selected — a default image will be used.",
+      "uploadProgress": "{{progress}}% uploaded",
+      "errorCreate": "Failed to create listing"
+    },
+    "actions": {
+      "upload": "Upload",
+      "uploading": "Uploading...",
+      "creating": "Creating…",
+      "submit": "Create Listing"
+    }
+  },
   "search": {
     "title": "Find your perfect property",
     "governorate": "Governorate",
+    "allGov": "All Governorate",
+    "allCities": "All Cities",
     "city": "City",
+    "allAreas": "All Areas",
+    "selectCityFirst": "Select city first",
     "type": "Property Type",
     "purpose": "Purpose",
     "all": "All",
     "rent": "Rent",
     "sale": "Sale",
     "search": "Search",
-    "reset": "Reset"
+    "reset": "Reset",
+    "loading": "Loading...",
+    "errorLoading": "Error loading",
+    "selectGovFirst": "Select governorate first",
+    "recentListing": "Recent listings",
+    "showMoreListings": "Show more listings",
+    "recentApartmentsForRent": "Recent apartments for rent",
+    "showMoreApartmentsForRent": "Show more apartments for rent",
+    "recentApartmentsForSale": "Recent apartments for sale",
+    "showMoreApartmentsForSale": "Show more apartments for sale",
+    "recentVillasForRent": "Recent villas for rent",
+    "showMoreVillasForRent": "Show more villas for rent",
+    "recentVillasForSale": "Recent villas for sale",
+    "showMoreVillasForSale": "Show more villas for sale",
+    "back": "<- Back",
+    "area": "Area",
+    "subarea": "Subarea",
+    "minPrice": "Min Price",
+    "maxPrice": "Max Price",
+    "minSize": "Min Size (sqm)",
+    "maxSize": "Max Size (sqm)",
+    "minBeds": "Min Bedrooms",
+    "maxBeds": "Max Bedrooms",
+    "minBaths": "Min Bathrooms",
+    "maxBaths": "Max Bathrooms",
+    "sort": "sort",
+    "newest": "Newest",
+    "oldest": "Oldest",
+    "priceLH": "Price (Low → High)",
+    "priceHL": "Price (High → Low)",
+    "searchResults": "Search Results",
+    "noResults": "No results found.",
+    "showing": "Showing",
+    "results": "results",
+    "listing": "listing",
+    "listings": "listings"
   },
   "listing": {
+    "description": "Description",
     "forRent": "For Rent",
     "forSale": "For Sale",
     "negotiable": "Negotiable",
-    "beds": "beds",
-    "baths": "baths",
+    "propertyDetails": "Property Details",
+    "type": "Type",
+    "location": "Location",
+    "listedOn": "Listed on",
+    "bed": "Bed",
+    "beds": "Beds",
+    "bath": "Bath",
+    "baths": "Baths",
     "sizeUnit": "sqm",
+    "size": "Size",
     "price": "EGP",
+    "furnished": "Furnished",
+    "parking": "Parking",
+    "floor": "Floor",
+    "landedBy": "Landed by",
     "listedBy": "Listed by",
     "seeMoreFromSeller": "See more from this seller",
     "propertyTypes": {
@@ -33,10 +180,88 @@
       "warehouse": "Warehouse",
       "building": "Building",
       "other": "Other"
-    }
+    },
+    "landArea": "Land Area",
+    "frontage": "Frontage",
+    "zoning": "Zoning",
+    "zoningTypes": {
+      "agricultural": "Agricultural",
+      "residential": "Residential",
+      "commercial": "Commercial",
+      "industrial": "Industrial",
+      "other": "Other"
+    },
+    "cornerLot": "Corner Lot",
+    "license": "License",
+    "mezzanine": "Mezzanine",
+    "parkingSpots": "Parking Spots",
+    "totalFloors": "Total Floors",
+    "totalUnits": "Total Units",
+    "elevator": "Elevator",
+    "buildYear": "Build Year",
+    "plotArea": "Plot Area",
+    "floorArea": "Floor Area",
+    "buildingYear": "Building Year",
+    "edit": "Edit",
+    "delete": "Delete",
+    "confirmDelete": "Are you sure you want to delete this listing?",
+    "contactSeller": "Contact Seller",
+    "similarListings": "Similar Listings",
+    "noSimilarListings": "No Similar Listings.",
+    "seeMoreFromThisSeller": "See more from this seller",
+    "seller": "Seller",
+    "memberSince": "Member since",
+    "member": "Member",
+    "yes": "Yes",
+    "no": "No",
+    "meter": "m",
+    "callSeller": "Call seller",
+    "contactWhatsApp": " WhatsApp",
+    "hello": "Hello, I'm interested in this listing"
   },
   "favorites": {
     "title": "Your Favorite Listings",
     "empty": "No favorites yet."
+  },
+  "profile": {
+    "title": "Profile",
+    "updateProfile": "Update Profile",
+    "username": "Username",
+    "email": "Email",
+    "password": "Password",
+    "memberSince": "Member since",
+    "update": "Update Profile",
+    "updating": "Updating...",
+    "updateSuccess": "Profile updated successfully.",
+    "updateError": "Error updating profile.",
+    "deleteAccount": "Delete Account",
+    "deleteAccountConfirmation": "Are you sure you want to delete your account?",
+    "accountDeleted": "Your account has been deleted.",
+    "deleteError": "Error deleting account.",
+    "signOut": "Sign Out",
+    "createListing": "Create Listing",
+    "seeAll": "See all",
+    "favorites": "Favorites",
+    "noFavorites": "You have no favorites yet.",
+    "yourListings": "Your Listings",
+    "noListings": "You have not created any listings yet.",
+    "errorFetchingListings": "Error fetching your listings.",
+    "edit": "Edit",
+    "delete": "Delete",
+    "confirmDeleteListing": "Are you sure you want to delete this listing?",
+    "listingDeleted": "Listing deleted successfully.",
+    "errorDeletingListing": "Error deleting listing."
+  },
+  "updateListing": {
+    "title": "Update Listing",
+    "actions": {
+      "submit": "Update Listing",
+      "updating": "Updating…"
+    },
+    "messages": {
+      "error": "Update failed",
+      "errorGeneric": "Something went wrong",
+      "loadError": "Failed to load listing"
+    }
   }
 }
