feat: update Arabic and English localization for favorites and listing components

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -51,7 +51,7 @@
       "cornerLot": "زاوية",
       "floorArea": "المساحة الداخلية (م²)",
       "licenseType": "نوع الترخيص",
-      "hasMezz": "ميزانين",
+      "hasMezz": "مساحة تخزين",
       "parkingSpots": "عدد أماكن الركن",
       "totalFloors": "إجمالي الطوابق",
       "totalUnits": "إجمالي الوحدات",
@@ -192,7 +192,7 @@
     },
     "cornerLot": "قطعة زاوية",
     "license": "ترخيص",
-    "mezzanine": "ميزانين",
+    "mezzanine": "مساحة تخزين",
     "parkingSpots": "أماكن وقوف السيارات",
     "totalFloors": "إجمالي الأدوار",
     "totalUnits": "إجمالي الوحدات",
@@ -220,7 +220,11 @@
   },
   "favorites": {
     "title": "إعلاناتك المفضلة",
-    "empty": "لا توجد مفضلات بعد."
+    "empty": "لا توجد مفضلات بعد.",
+    "addFavorites": "لم تقم بعد بإضافة أي إعلانات إلى مفضلاتك. استكشف الإعلانات وانقر على أيقونة القلب لحفظ المفضلة لديك!",
+    "showingListings": "عرض {{count}} {{count, plural, one {إعلان} other {إعلانات}}}",
+    "loading": "جارٍ تحميل المفضلات...",
+    "errorLoading": "خطأ في تحميل المفضلات."
   },
   "profile": {
     "title": "الملف الشخصي",
