feat: update footer links and improve localization for quick links; add share functionality in listing component

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -310,9 +310,9 @@
     },
     "quickLinks": {
       "title": "روابط سريعة",
-      "apartmentsForRent": "شقق ",
-      "villasForRent": "فلل ",
-      "commercialProperties": "عقارات تجارية"
+      "apartments": "شقق ",
+      "villas": "فلل ",
+      "shops": "محلات"
     }
   }
 }
